fix: unusual spacing between the icons in the mobile view

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -239,7 +239,6 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 }
 
 .jsdialog.ui-separator.horizontal {
-	width: 100%;
 	margin: 0px;
 	background-color: var(--color-border-lighter);
 	border: none;
